0028068: Samples - Add dimension functionality shows incorrect tip for an Edge in mfc Viewer3d

Warning message was updated to show actual information.
Additional checking of type of shape was added to prevent exceptions for Add Dimension functionality.