samples/mfc/standard/Common/LengthParamsEdgesPage.cpp
@@ -71,7 +71,8 @@ void CLengthParamsEdgesPage::OnBnClickedEdge1Btn()
   // Now it's ok, local context is opened and edge selection mode is activated
   // Check if some edge is selected
   myAISContext->LocalContext()->InitSelected();
-  if (!myAISContext->LocalContext()->MoreSelected())
+  if (!myAISContext->LocalContext()->MoreSelected() ||
+       myAISContext->SelectedShape().ShapeType() != TopAbs_EDGE)
   {
     AfxMessageBox(_T("Choose the edge and press the button again"),
                     MB_ICONINFORMATION | MB_OK);
@@ -91,7 +92,8 @@ void CLengthParamsEdgesPage::OnBnClickedEdge1Btn()
 void CLengthParamsEdgesPage::OnBnClickedEdge2Btn()
 {
   myAISContext->LocalContext()->InitSelected();
-  if (!myAISContext->LocalContext()->MoreSelected())
+  if (!myAISContext->LocalContext()->MoreSelected() ||
+       myAISContext->SelectedShape().ShapeType() != TopAbs_EDGE)
   {
     AfxMessageBox (_T("Choose the edge and press the button again"),
        MB_ICONINFORMATION | MB_OK);
